COmmit new homepage

--- a/Assignment 1/css/style.css
+++ b/Assignment 1/css/style.css
@@ -147,7 +147,7 @@
 }
 /******************* Test *********************************/
 .working-space {
-	background: url('../Appartment/Temp/Cidrap.png') no-repeat;
+	background: url('../Appartment/Real/Cidrap.png') no-repeat;
 	min-height: 475px; /*dummy value -_-*/
 	/*z-index: -1;*/
 	opacity: .8; 
