--- a/Assignment 1/css/style.css
+++ b/Assignment 1/css/style.css
@@ -148,6 +148,7 @@
 /******************* Test *********************************/
 .working-space {
 	background: url('../Appartment/Real/Cidrap.png') no-repeat;
+	background-position: center;
 	min-height: 475px; /*dummy value -_-*/
 	/*z-index: -1;*/
 	opacity: .8; 
